--- a/style.css
+++ b/style.css
@@ -271,6 +271,11 @@ h1 span {
   cursor: pointer;
 }
 
+.btn:hover {
+  background: #36b37f;
+  box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
+}
+
 .section-paragraph {
   display: flex;
   justify-content: center;
@@ -334,6 +339,7 @@ h1 span {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  list-style: none;
 }
 
 .tec-btns li {
