--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ h1 span {
 
 .btn:hover {
   background: #36b37f;
-  box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
+  box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
 }
 
 .section-paragraph {
@@ -518,7 +518,6 @@ hr {
 .modal-content .fa-times {
   color: #fff;
   cursor: pointer;
-  /* margin-right: 20px; */
   font-size: 20px;
   position: absolute;
   right: 35px;
