--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ h1 span {
   margin: 10px;
 }
 
-.project-btn a {
+button {
   outline: none;
   border: none;
   border-radius: 8px;
@@ -281,7 +281,6 @@ h1 span {
 .btn {
   background-color: #36b37f;
   border-radius: 4px;
-  width: 122px;
   height: 48px;
   padding: 12px;
   border: none;
